@@ -243,6 +243,7 @@
 - P4A_Mask_Error was renamed to P4A_Error_Mask
 - P4A_Canvas now is rendered inside a container div to have id/class/properties/actions
 - all P4A objects now support chainability
+- P4A_Image::setSource() and getSource() methods were removed
 
 2.2.4
 - rules to generate P4A_THEME_DIR and P4A_ICONS_DIR were changed
